优化 动态where